--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -14,7 +14,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: TierMobility
+          username: ${{ github.GITHUB_ACTOR }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       # The github ref is in the 'refs/tags/<tag_name>' format, therefore we strip until the <tag_name>
