--- a/.github/workflows/minio.yml
+++ b/.github/workflows/minio.yml
@@ -21,7 +21,7 @@ jobs:
         volumes:
           - ${{ github.workspace }}/data:/data
         options: --name=minio --health-cmd "curl http://localhost:9000/minio/health/live"
-        command: server /data
+        run: minio server /data
     steps:
       - name: Install minio python module
         run: pip3 install minio
