--- a/.github/workflows/minio.yml
+++ b/.github/workflows/minio.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     services:
       minio:
-        image: minio/minio
+        image: lazybit/minio
         ports:
           - 9000:9000
         env:
