--- a/.github/workflows/minio.yml
+++ b/.github/workflows/minio.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     services:
       minio:
-        image: lazybit/minio
+        image: minio/minio
         ports:
           - 9000:9000
         env:
@@ -20,7 +20,7 @@ jobs:
           MINIO_SECRET_KEY: citest
         volumes:
           - ${{ github.workspace }}/data:/data
-        options: --name=minio --health-cmd "curl http://localhost:9000/minio/health/live"
+        options: --name=minio --health-cmd "curl http://localhost:9000/minio/health/ready"
     steps:
       - name: Install minio python module
         run: pip3 install minio
