--- a/.github/workflows/minio.yml
+++ b/.github/workflows/minio.yml
@@ -10,18 +10,34 @@ jobs:
   minio:
     name: minio
     runs-on: ubuntu-latest
-    services:
-      minio:
-        image: minio/minio
-        ports:
-          - 9000:9000
-        env:
-          MINIO_ACCESS_KEY: citest
-          MINIO_SECRET_KEY: citest
-        volumes:
-          - ${{ github.workspace }}/data:/data
-        options: --name=minio --health-cmd "curl http://localhost:9000/minio/health/ready"
+    # services:
+    #   minio:
+    #     image: minio/minio
+    #     ports:
+    #       - 9000:9000
+    #     env:
+    #       MINIO_ACCESS_KEY: citest
+    #       MINIO_SECRET_KEY: citest
+    #     volumes:
+    #       - ${{ github.workspace }}/data:/data
+    #     options: --name=minio --health-cmd "curl http://localhost:9000/minio/health/ready"
+    
     steps:
+      - name: Setup minio
+        run: |
+          docker run -d -p 9000:9000 --name minio \
+                     -e "MINIO_ACCESS_KEY=minioadmin" \
+                     -e "MINIO_SECRET_KEY=minioadmin" \
+                     -v /tmp/data:/data \
+                     -v /tmp/config:/root/.minio \
+                     minio/minio server /data
+
+          export AWS_ACCESS_KEY_ID=minioadmin
+          export AWS_SECRET_ACCESS_KEY=minioadmin
+          export AWS_EC2_METADATA_DISABLED=true
+
+          aws --endpoint-url http://127.0.0.1:9000/ s3 mb s3://testbucket
+          
       - name: Install minio python module
         run: pip3 install minio
       - name: Setup minio bucket
