--- a/.github/workflows/minio.yml
+++ b/.github/workflows/minio.yml
@@ -70,13 +70,13 @@ jobs:
           wget -o /usr/local/bin/mc https://dl.min.io/client/mc/release/linux-amd64/mc
           chmod +x /usr/local/bin/mc
       - name: Setup Minio Admin CLI
-        run: mc alias set ghactions http://localhost:9000 ${{ env.MINIO_ADMIN_ACCESS_KEY }} ${{ env.MINIO_ADMIN_SECRET_KEY }}
+        run: |
+          mc alias set ghactions http://localhost:9000 ${{ env.MINIO_ADMIN_ACCESS_KEY }} ${{ env.MINIO_ADMIN_SECRET_KEY }}
       - name: Setup CI Bucket
         run: |
           mc mb -p ghactions/${{ env.BUCKET_NAME }}
       - name: Setup CI User
         run: |
-          
           mc admin user add ghactions ${{ env.MINIO_ACCESS_KEY }} ${{ env.MINIO_SECRET_KEY }}
           cat > /tmp/policy.json << 'EOF'
           {
