--- a/.github/workflows/minio.yml
+++ b/.github/workflows/minio.yml
@@ -65,18 +65,12 @@ jobs:
       #     minio.make_bucket("${{ env.BUCKET_NAME }}")
       #     print(f'{minio.list_buckets()}')
       #     EOF
-      - name: Download mc cli
+      - name: Setup Minio
         run: |
           wget -o /usr/local/bin/mc https://dl.min.io/client/mc/release/linux-amd64/mc
           chmod +x /usr/local/bin/mc
-      - name: Setup Minio Admin CLI
-        run: |
           mc alias set ghactions http://localhost:9000 ${{ env.MINIO_ADMIN_ACCESS_KEY }} ${{ env.MINIO_ADMIN_SECRET_KEY }}
-      - name: Setup CI Bucket
-        run: |
           mc mb -p ghactions/${{ env.BUCKET_NAME }}
-      - name: Setup CI User
-        run: |
           mc admin user add ghactions ${{ env.MINIO_ACCESS_KEY }} ${{ env.MINIO_SECRET_KEY }}
           cat > /tmp/policy.json << 'EOF'
           {
