--- a/.github/workflows/minio.yml
+++ b/.github/workflows/minio.yml
@@ -16,20 +16,9 @@ jobs:
       MINIO_ADMIN_ACCESS_KEY: minioadmin
       MINIO_ADMIN_SECRET_KEY: minioadmin
       BUCKET_NAME: testbucket
-    # services:
-    #   minio:
-    #     image: minio/minio
-    #     ports:
-    #       - 9000:9000
-    #     env:
-    #       MINIO_ACCESS_KEY: citest
-    #       MINIO_SECRET_KEY: citest
-    #     volumes:
-    #       - ${{ github.workspace }}/data:/data
-    #     options: --name=minio --health-cmd "curl http://localhost:9000/minio/health/ready"
     
     steps:
-      - name: Setup minio
+      - name: Setup minio server
         run: |
           docker run -d -p 9000:9000 --name minio \
                      -e "MINIO_ACCESS_KEY=${{ env.MINIO_ADMIN_ACCESS_KEY }}" \
@@ -38,33 +27,6 @@ jobs:
                      -v ${{ github.workspace }}/config:/root/.minio \
                      minio/minio server /data
 
-      #    export AWS_ACCESS_KEY_ID=${{ env.MINIO_ADMIN_ACCESS_KEY }}
-      #    export AWS_SECRET_ACCESS_KEY=${{ env.MINIO_ADMIN_SECRET_KEY }}
-      #    export AWS_EC2_METADATA_DISABLED=true
-
-      #    aws --endpoint-url http://127.0.0.1:9000/ s3 mb s3://testbucket
-
-      # - name: Install minio python module
-      #   run: pip3 install minio
-      # - name: Setup minio bucket
-      #   run: |
-      #     python3 - <<'EOF'
-      #     from minio import Minio
-      #     from minio.error import InvalidResponseError
-
-      #     try:
-      #         minio = Minio(
-      #             'localhost:9000',
-      #             access_key="${{ env.MINIO_ADMIN_ACCESS_KEY }}",
-      #             secret_key="${{ env.MINIO_ADMIN_SECRET_KEY }}",
-      #             secure=False
-      #         )
-      #     except Exception as ex:
-      #         raise
-          
-      #     minio.make_bucket("${{ env.BUCKET_NAME }}")
-      #     print(f'{minio.list_buckets()}')
-      #     EOF
       - name: Download mc cli
         run: |
           wget -O /usr/local/bin/mc https://dl.min.io/client/mc/release/linux-amd64/mc
@@ -98,3 +60,6 @@ jobs:
           mc admin policy add ghactions cipolicy /tmp/policy.json
           mc admin policy set ghactions cipolicy user=${{ env.MINIO_ACCESS_KEY }}
           mc admin user info ghactions ${{ env.MINIO_ACCESS_KEY }}
+      - name: Run Tests against minio
+        run: |
+          echo "Here be dragons!"
