--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -14,8 +14,8 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ github.GITHUB_ACTOR }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ github.repository_owner }}
+          password: ${{ github.token }}
 
       # The github ref is in the 'refs/tags/<tag_name>' format, therefore we strip until the <tag_name>
       - name: set tag_name
@@ -25,4 +25,4 @@ jobs:
       - uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/tiermobility/boring-registry:${{ env.tag_name }}
+          tags: ghcr.io/${{ github.repository }}:${{ env.tag_name }}
