--- a/.github/workflows/minio.yml
+++ b/.github/workflows/minio.yml
@@ -16,17 +16,29 @@ jobs:
       MINIO_ADMIN_ACCESS_KEY: minioadmin
       MINIO_ADMIN_SECRET_KEY: minioadmin
       BUCKET_NAME: testbucket
-    
+    services:
+      minio:
+        image: minio/minio
+        ports:
+          - 9000:9000
+        env:
+          MINIO_ACCESS_KEY: citest
+          MINIO_SECRET_KEY: citest
+        volumes:
+          - ${{ github.workspace }}/data:/data
+        options:
+          - --name=minio
+          - --health-cmd "curl http://localhost:9000/minio/health/live"
+          - --entrypoint="minio server /data"
     steps:
-      - name: Setup minio server
-        run: |
-          docker run -d -p 9000:9000 --name minio \
-                     -e "MINIO_ACCESS_KEY=${{ env.MINIO_ADMIN_ACCESS_KEY }}" \
-                     -e "MINIO_SECRET_KEY=${{ env.MINIO_ADMIN_SECRET_KEY }}" \
-                     -v ${{ github.workspace }}/data:/data \
-                     -v ${{ github.workspace }}/config:/root/.minio \
-                     minio/minio server /data
-
+      # - name: Setup minio server
+      #   run: |
+      #     docker run -d -p 9000:9000 --name minio \
+      #                -e "MINIO_ACCESS_KEY=${{ env.MINIO_ADMIN_ACCESS_KEY }}" \
+      #                -e "MINIO_SECRET_KEY=${{ env.MINIO_ADMIN_SECRET_KEY }}" \
+      #                -v ${{ github.workspace }}/data:/data \
+      #                -v ${{ github.workspace }}/config:/root/.minio \
+      #                minio/minio server /data
       - name: Download mc cli
         run: |
           wget -O /usr/local/bin/mc https://dl.min.io/client/mc/release/linux-amd64/mc
