--- a/.github/workflows/minio.yml
+++ b/.github/workflows/minio.yml
@@ -18,7 +18,7 @@ jobs:
       BUCKET_NAME: testbucket
     services:
       minio:
-        image: minio/minio
+        image: bitnami/minio
         ports:
           - 9000:9000
         env:
@@ -26,7 +26,7 @@ jobs:
           MINIO_SECRET_KEY: ${{ env.MINIO_ADMIN_SECRET_KEY }}
         volumes:
           - ${{ github.workspace }}/data:/data
-        options: '--name=minio --health-cmd "curl http://localhost:9000/minio/health/live" --entrypoint="minio server /data"'
+        options: '--name=minio --health-cmd "curl http://localhost:9000/minio/health/live"'
     steps:
       # - name: Setup minio server
       #   run: |
