--- a/.github/workflows/minio.yml
+++ b/.github/workflows/minio.yml
@@ -26,7 +26,7 @@ jobs:
           MINIO_SECRET_KEY: ${{ env.MINIO_ADMIN_SECRET_KEY }}
         volumes:
           - ${{ github.workspace }}/data:/data
-        options: '--name=minio --health-cmd "curl http://localhost:9000/minio/health/live"'
+        options: '--name=minio --health-cmd "curl http://localhost:9000/minio/health/ready"'
     steps:
       # - name: Setup minio server
       #   run: |
