--- a/.github/workflows/minio.yml
+++ b/.github/workflows/minio.yml
@@ -22,11 +22,12 @@ jobs:
         ports:
           - 9000:9000
         env:
-          MINIO_ACCESS_KEY: ${{ env.MINIO_ADMIN_ACCESS_KEY }}
-          MINIO_SECRET_KEY: ${{ env.MINIO_ADMIN_SECRET_KEY }}
+          MINIO_ROOT_USER: ${{ env.MINIO_ADMIN_ACCESS_KEY }}
+          MINIO_ROOT_PASSWORD: ${{ env.MINIO_ADMIN_SECRET_KEY }}
         volumes:
           - ${{ github.workspace }}/data:/data
-        options: '--name=minio --health-cmd "curl http://localhost:9000/minio/health/live" --health-start-period=4s'
+          - ${{ github.workspace }}/config:/root/.minio
+        options: '--health-cmd "curl http://localhost:9000/minio/health/live" --health-start-period=10s'
     steps:
       # - name: Setup minio server
       #   run: |
